Added a (finally) leak free int stack (: !!

--- a/algorithms.vcxproj
+++ b/algorithms.vcxproj
@@ -140,9 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="arraysAndStrings.cpp" />
+    <ClCompile Include="IntStack.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arraysAndStrings.h" />
+    <ClInclude Include="IntStack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
