Added bit operations.

--- a/algorithms.vcxproj
+++ b/algorithms.vcxproj
@@ -140,12 +140,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="arraysAndStrings.cpp" />
+    <ClCompile Include="bits.cpp" />
     <ClCompile Include="IntStack.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="sorting.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arraysAndStrings.h" />
+    <ClInclude Include="bits.h" />
     <ClInclude Include="IntStack.h" />
+    <ClInclude Include="sorting.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
